infrastructure/k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-detector-service
spec:
  selector:
    app: pet-detector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
